--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,18 +6,18 @@ repository: https://gitlab.com/testapp-system/file_picker_cross.git
 issue_tracker: https://gitlab.com/testapp-system/file_picker_cross/issues
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.13.0-30.0.dev <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  file_picker: ^2.0.7
-  http: ^0.12.2
-  http_parser: ^3.1.4
+  file_picker: ^3.0.0-nullsafety.2
+  http: ^0.13.0
+  http_parser: ^4.0.0
   file_chooser: ^0.1.6
-  path_provider: ^1.6.18
-  package_info: ^0.4.3
-  share: ^0.6.5
+  path_provider: ^2.0.0
+  package_info: ^2.0.0
+  share: ^2.0.0
   disk_space: ^0.0.3
 
 dev_dependencies:
