--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,25 +1,27 @@
 name: file_picker_cross
 description: Select, open, choose or pick documents, images videos or other files on Android, iOS, the desktop and the web for reading, writing, use as String, byte list or HTTP uploads.
-version: 4.2.7
+version: 4.2.9
 homepage: https://gitlab.com/testapp-system/file_picker_cross
 repository: https://gitlab.com/testapp-system/file_picker_cross.git
 issue_tracker: https://gitlab.com/testapp-system/file_picker_cross/issues
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  file_picker: ^2.0.7
-  http: ^0.12.2
-  http_parser: ^3.1.4
+  file_picker: ^3.0.0-nullsafety.3
+  http: ^0.13.0
+  http_parser: ^4.0.0
   file_chooser: ^0.1.6
-  path_provider: ^1.6.18
-  package_info: ^0.4.3
-  share: ^0.6.5
+  path_provider: ^2.0.1
+  package_info: ^2.0.0
+  share: ^2.0.0
   disk_space: ^0.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  pedantic: any
