--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   share: ^2.0.0
   # TEMPORARY
   #disk_space: ^0.0.3
-  disk_space:
+  disk_space_ns:
     git:
       url: https://github.com/uintdev/disk_space_ns.git
 
