--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,11 @@ dependencies:
   file_picker: ^3.0.0-nullsafety.3
   http: ^0.13.0
   http_parser: ^4.0.0
-  file_chooser: ^0.1.6
+  #file_chooser: ^0.1.6
+  file_chooser:
+    git:
+      url: https://github.com/uintdev/file_chooser.git
+      path: plugins/file_chooser
   path_provider: ^2.0.1
   package_info: ^2.0.0
   share: ^2.0.0
