--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   path_provider: ^2.0.1
   package_info: ^2.0.0
   share: ^2.0.0
-  disk_space_ns: ^0.1.0
+  disk_space: 0.1.0+2
 
 dev_dependencies:
   flutter_test:
